--- a/OLAGLASSES/Views/Client/EditDeleteprescriotion.cshtml
+++ b/OLAGLASSES/Views/Client/EditDeleteprescriotion.cshtml
@@ -59,6 +59,10 @@
                 padding-top: 10px;
             }
         }
+        .protfolio-hero-aria .protfolio-banner {
+            background-position: inherit !important;
+            background-size: cover !important;
+        }
     </style>
 </head>
 <!-- ::::protfolio-hero-aria start:::::: -->
