--- a/OLAGLASSES/Views/Client/Orders.cshtml
+++ b/OLAGLASSES/Views/Client/Orders.cshtml
@@ -62,6 +62,10 @@
                 padding-top: 10px;
             }
         }
+        .protfolio-hero-aria .protfolio-banner {
+            background-position: inherit !important;
+            background-size: cover !important;
+        }
     </style>
 </head>
 <!-- ::::protfolio-hero-aria start:::::: -->
@@ -216,7 +220,7 @@
                     else
                     {
 
-                        <h4 class="text-center" style="color:red; text-align:center; ">No Address availale</h4>
+                        <h4 class="text-center" style="color:red; text-align:center; ">No Orders availale</h4>
 
                     }
                 </div>
