--- a/OLAGLASSES/Views/Coupons/Create.cshtml
+++ b/OLAGLASSES/Views/Coupons/Create.cshtml
@@ -122,7 +122,7 @@
                         </div>
                         <div class="col-lg-4">
                             <div class="form-group">
-                                <label>Discount(%) <span class="text-danger">*</span></label>
+                                <label>Discount<span class="text-danger">*</span></label>
 
                                 <input class="form-control" type="text" name="Discount" id="Discount" value="@Model.Discount" required="">
                             </div>
