--- a/OLAGLASSES/Views/Dashboard/UsersEdit.cshtml
+++ b/OLAGLASSES/Views/Dashboard/UsersEdit.cshtml
@@ -164,7 +164,7 @@
 
                             </div>
                         </div>
-                        <div class="col-lg-3">
+                        @*<div class="col-lg-3">
                             <div class="form-group">
                                 <label>Password <span class="text-danger">*</span></label>
 
@@ -172,7 +172,7 @@
 
 
                             </div>
-                        </div>
+                        </div>*@
                         <div class="col-lg-3" style="margin-top:3%">
                             <div class="form-group">
                                 <button class="btn btn-primary submit-btn" type="submit" name="form_submit" value="submit">Submit</button>
