--- a/OLAGLASSES/Views/Home/index.cshtml
+++ b/OLAGLASSES/Views/Home/index.cshtml
@@ -654,7 +654,7 @@
 <script>
     function scrollToBottom(id) {
         $('html,body').animate({
-            scrollTop: $(".product-bg").offset().top
+            scrollTop: $("#products_detail").offset().top
         },
             'fast');
     }
