--- a/OLAGLASSES/Views/PaymentProcess/Checkout.cshtml
+++ b/OLAGLASSES/Views/PaymentProcess/Checkout.cshtml
@@ -245,7 +245,11 @@
                                             {
                                                 <li>UV Protection :    @item.UVProtection</li>
                                             }
+                                            @if (Convert.ToInt32(item.Extracharges)>0)
+                                            {
+                                                <li>Extra Charges : $15</li>
 
+                                            }
 
 
                                         </ul>
