--- a/OLAGLASSES/Views/Client/ChangePassword.cshtml
+++ b/OLAGLASSES/Views/Client/ChangePassword.cshtml
@@ -53,6 +53,10 @@
                 padding-top: 10px;
             }
         }
+        .protfolio-hero-aria .protfolio-banner {
+            background-position: inherit !important;
+            background-size: cover !important;
+        }
     </style>
 </head>
 <!-- ::::protfolio-hero-aria start:::::: -->
