--- a/OLAGLASSES/Views/Client/PersonalInfo.cshtml
+++ b/OLAGLASSES/Views/Client/PersonalInfo.cshtml
@@ -117,6 +117,16 @@
             /* width: 220px;*/
             margin-top: 3%;
         }
+        .protfolio-hero-aria .protfolio-banner {
+            background-position: inherit !important;
+            background-size: cover !important;
+        }
+        .change-avatar .profile-img img {
+            border-radius: 4px;
+            height: 100px;
+            width: 100px;
+            object-fit: unset !important;
+        }
     </style>
 </head>
 
