--- a/OLAGLASSES/Views/Glassess/VariationIndex.cshtml
+++ b/OLAGLASSES/Views/Glassess/VariationIndex.cshtml
@@ -83,10 +83,10 @@
 
 
                                         <a href="@Url.Action("VariationCreate","Glassess", new { id=@item.VariationID, productid=@ViewBag.GlassID})" class="btn btn-sm bg-success-light">
-                                            <i class="fas fa-pen"></i> Edit
+                                            <i class="fas fa-pen"></i> 
                                         </a>
                                         <a href="javascript:void(0)" onclick="DeleteData(@item.VariationID,@ViewBag.GlassID)" class="btn btn-sm bg-danger-light">
-                                            <i class="fas fa-trash"></i> Delete
+                                            <i class="fas fa-trash"></i> 
                                         </a>
                                     </div>
                                 </td>
