--- a/OLAGLASSES/Views/Home/eyeglassess.cshtml
+++ b/OLAGLASSES/Views/Home/eyeglassess.cshtml
@@ -376,10 +376,10 @@
                                         </div>
                                         <div class="glsber_details ">
                                             <h5>Total Width</h5>
-                                            <input onchange="Applyproductfilter(this,'','','')" type="range" min="110" max="150" value="0" class="range" id="myRange">
+                                            <input onchange="Applyproductfilter(this,'','','')" type="range" min="30" max="100" value="0" class="range" id="myRange">
                                             <div class="d-flex align-items-center  justify-content-between">
-                                                <span>110mm </span>
-                                                <span>150mm  </span>
+                                                <span>30mm </span>
+                                                <span>100mm  </span>
                                             </div>
                                         </div>
                                     </div>
@@ -1339,12 +1339,7 @@
 
 
                   $("#pagin li").remove();
-                  $(function () {
-                      $('#page').Pagination({
-                          size: 100
-
-                      });
-                  });
+               
 
                   var pageSize = 8;
                   var pageCount = $(".product_style").length / pageSize;
@@ -1384,7 +1379,7 @@
 
     function scrollToBottom(id) {
         $('html,body').animate({
-            scrollTop: $(".Products_Section").offset().top
+            scrollTop: $("#Products_Section").offset().top
         },
             'slow');
     }
@@ -1408,12 +1403,7 @@
 
 
     $(document).ready(function () {
-        $(function () {
-            $('#page').Pagination({
-                size: 100
-
-            });
-        });
+      
 
         var pageSize = 8;
 
