--- a/OLAGLASSES/Views/PaymentProcess/Index1.cshtml
+++ b/OLAGLASSES/Views/PaymentProcess/Index1.cshtml
@@ -124,7 +124,12 @@
                                                 <li>UV Protection :    @item.UVProtection</li>
                                             }
 
+                                            @if (Convert.ToInt32(item.Extracharges) > 0)
+                                            {
+                                                <li>Extra Charges: $15</li>
+                                           
 
+                                            }
 
                                         </ul>
                                     </div>
