--- a/OLAGLASSES/Views/Home/eyeglassess.cshtml
+++ b/OLAGLASSES/Views/Home/eyeglassess.cshtml
@@ -1162,7 +1162,8 @@
     }
 
         /*Apply filters to products*/
-    function Applyproductfilter(width,filtertype, filterdata,colorpalet) {
+    function Applyproductfilter(width, filtertype, filterdata, colorpalet) {
+        alert(width.value);
     /*alert(filtertype + " " + filterdata);*/
         var widthsize = width.value;
 
