--- a/OLAGLASSES/Views/Products/Product_Details.cshtml
+++ b/OLAGLASSES/Views/Products/Product_Details.cshtml
@@ -528,7 +528,7 @@
 
         .carousel-inner img {
             width: 100%;
-            height: 100%
+            height: 100% !important;
         }
 
         #custCarousel .carousel-indicators {
